--- a/.github/ISSUE_TEMPLATE/------channel-request.yml
+++ b/.github/ISSUE_TEMPLATE/------channel-request.yml
@@ -19,13 +19,13 @@ body:
 
   - type: input
     attributes:
-      label: Stream URL
+      label: Stream URL (optional)
       description: Link to the stream (if you have one)
       placeholder: 'https://example.com/playlist.m3u8'
 
   - type: textarea
     attributes:
-      label: Notes
+      label: Notes (optional)
       description: 'Anything else we should know about this broadcast?'
 
   - type: checkboxes
