--- a/.github/ISSUE_TEMPLATE/------channel-request.yml
+++ b/.github/ISSUE_TEMPLATE/------channel-request.yml
@@ -12,7 +12,7 @@ body:
   - type: input
     attributes:
       label: Channel ID
-      description: Unique channel ID from [iptv-org.github.io](https://iptv-org.github.io/). If you can't find the channel you want in the list, please let us know through this [form](https://github.com/iptv-org/database/issues/new?assignees=&labels=channel+request&template=---channel-request.yml&title=Add%3A+).
+      description: Unique channel ID from [iptv-org.github.io](https://iptv-org.github.io/). If you can't find the channel you want in the list, please let us know through this [form](https://github.com/iptv-org/database/issues/new?assignees=&labels=channels%3Aadd&template=channels_add.yml&title=Add%3A+).
       placeholder: 'BBCAmericaEast.us'
     validations:
       required: true
