--- a/.github/ISSUE_TEMPLATE/-----broken-stream.yml
+++ b/.github/ISSUE_TEMPLATE/-----broken-stream.yml
@@ -1,6 +1,6 @@
 name: 🛠 Broken Stream
 description: Report a broken stream
-title: 'Replace: '
+title: 'Broken: '
 labels: ['🛠 broken stream']
 
 body:
