--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "iptv",
   "scripts": {
-    "act:auto-update": "act workflow_dispatch -W .github/workflows/auto-update.yml --artifact-server-path=.artifacts",
-    "act:check": "act pull_request -W .github/workflows/check.yml",
-    "act:test": "act workflow_dispatch -W .github/workflows/test.yml",
     "api:load": "./scripts/commands/api/load.sh",
     "db:clear": "node scripts/commands/database/clear.js",
     "db:create": "node scripts/commands/database/create.js",
@@ -16,6 +13,8 @@
     "playlist:update": "node scripts/commands/playlist/update.js",
     "playlist:lint": "npx m3u-linter -c m3u-linter.json",
     "readme:update": "node scripts/commands/readme/update.js",
+    "update": "npm run api:load && npm run db:create && npm run playlist:generate && npm run readme:update",
+    "check": "npm run playlist:lint && npm run playlist:validate",
     "test": "jest --runInBand"
   },
   "jest": {
