--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "playlist:update": "node scripts/commands/playlist/update.js",
     "playlist:lint": "npx m3u-linter -c m3u-linter.json",
     "readme:update": "node scripts/commands/readme/update.js",
-    "update": "npm run api:load && npm run db:create && npm run playlist:generate && npm run readme:update",
+    "update": "npm run api:load && npm run db:create && npm run playlist:generate && npm run db:export && npm run readme:update",
     "check": "npm run api:load && npm run playlist:lint && npm run playlist:validate",
     "test": "jest --runInBand"
   },
