--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "iptv",
   "scripts": {
     "api:load": "./scripts/commands/api/load.sh",
-    "db:clear": "node scripts/commands/database/clear.js",
+    "api:generate": "node scripts/commands/api/generate.js",
+    "api:deploy": "npx gh-pages -a -m \"Deploy to iptv-org/api\" -d .api -r https://$GITHUB_TOKEN@github.com/iptv-org/api.git -x",
     "db:create": "node scripts/commands/database/create.js",
-    "db:matrix": "node scripts/commands/database/matrix.js",
-    "db:update": "node scripts/commands/database/update.js",
-    "db:export": "node scripts/commands/database/export.js",
-    "cluster:load": "node scripts/commands/cluster/load.js",
-    "playlist:validate": "node scripts/commands/playlist/validate.js",
     "playlist:generate": "node scripts/commands/playlist/generate.js",
-    "playlist:update": "node scripts/commands/playlist/update.js",
+    "playlist:validate": "node scripts/commands/playlist/validate.js",
     "playlist:lint": "npx m3u-linter -c m3u-linter.json",
+    "playlist:deploy": "npx gh-pages -a -m \"Deploy to GitHub Pages\" -d .gh-pages -r https://$GITHUB_TOKEN@github.com/iptv-org/iptv.git -x",
     "readme:update": "node scripts/commands/readme/update.js",
-    "update": "npm run api:load && npm run db:create && npm run playlist:generate && npm run db:export && npm run readme:update",
+    "update": "npm run api:load && npm run db:create && npm run playlist:generate && npm run api:generate && npm run readme:update",
+    "deploy": "npm run playlist:deploy && npm run api:deploy",
     "check": "npm run api:load && npm run playlist:lint && npm run playlist:validate",
     "test": "jest --runInBand"
   },
@@ -32,6 +30,7 @@
     "commander": "^8.3.0",
     "dayjs": "^1.10.7",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^5.0.0",
     "iptv-checker": "^0.26.0",
     "iptv-playlist-parser": "^0.12.1",
     "jest": "^27.5.1",
